--- a/ExamEDA_FeatEng.Rmd
+++ b/ExamEDA_FeatEng.Rmd
@@ -26,6 +26,26 @@ library(visdat)   # for additional visualizations
 # Feature engineering packages
 library(caret)    # for various ML tasks
 library(recipes)  # for feature engineering tasks
+
+library(DataExplorer) # for data exploration
+library(caTools)      # Data splits
+library(rsample)      # for resampling procedures
+library(Hmisc)        # Missing data handling
+library(Metrics)#      # Performance measures
+library(reshape2)
+library(rpart)        # for fitting decision trees
+library(ipred)        # for fitting bagged decision trees #used in bagging in addition to random forest e.g. to compare bagging vs rf (but RF will dominate)
+library(randomForest) # for fitting bagged decision trees
+library(ranger)       # a c++ implementation of random forest 
+library(h2o)          # a java-based random forest
+library(modeldata)#    # for data set Job attrition
+library(kernlab)      # also for fitting SVMs 
+library(pdp)          # for partial dependence plots, etc.
+library(forecast)#     # Library for performance evaluation
+library(gbm)          # For Gradient Boosting models
+library(pROC)         # For AUC
+library(ROCR)         # For ROC AUC
+library(kernlab)
 ```
 
 
@@ -551,559 +571,6 @@ number_of_unique_location.name <- length(unique_location.name)
 number_of_unique_location.name
 ```
 
-Commit
-=======
----
-title: "ExamFeatEngineering"
-output: html_document
-date: "2024-04-30"
----
-
-#ML2 Alina part
-
-```{r dataload}
-library(readxl)
-Data <- read_excel("C:/Users/Bruger/OneDrive - Aarhus universitet/8. semester - BI/ML2 - Machine Learning 2/ML2EXAM/Data.xls")
-emp <- Data
-```
-
-```{r}
-#install.packages("visdat")
-```
-
-
-```{r packages}
-# Helper packages
-library(dplyr)    # for data manipulation
-library(ggplot2)  # for awesome graphics
-library(visdat)   # for additional visualizations
-# Feature engineering packages
-library(caret)    # for various ML tasks
-library(recipes)  # for feature engineering tasks
-```
-
-
-```{r data structure - overview}
-library(dplyr)
-# Convert all character columns in the data frame 'emp' to factors
-emp <- emp %>%
-  mutate(across(where(is.character), factor))
-glimpse(emp)
-```
-character string (<chr>): these should be transformed into categorical variables
-numeric <dbl>
-
-```{r Missing overview}
-library(visdat)
-sum(is.na(emp))
-vis_miss(emp, cluster = TRUE) #visdat library
-plot_missing(emp)
-```
-- no NA's in variables: reviewId, reviewDateTime, ratingOverall, ratingWorkLifeBalance, ratingCultureAndValues, -	ratingDiversityAndInclusion, ratingSeniorLeadership, ratingCareerOpportunities, ratingCompensationAndBenefits, lengthOfEmployment
-- NA's from 0% - 5%: employmentStatus
-- NA's from 5% - 10%: jobTitle.text
-- NA's from 10% - 40%: ratingRecommendToFriend, isCurrentJob, location.name
-- NA's from 40% -> : jobEndingYear
-
-## reviewId: Unique identifier for each review
-
-- This variable is completely arbitrarily labeled, whereas it is considered as noise: delete variable
-
-```{r reviewId}
-str(emp$reviewId)
-emp$reviewId <- NULL
-```
-
-## reviewDateTime: Timestamp of when the review was submitted
-
-```{r reviewDateTime }
-str(emp$reviewDateTime)
-```
-reviewDateTime follows the standard ISO 8601 format: YYYY-MM-DDTHH:MM:SS.fff, where:
-YYYY represents the year,
-MM the month,
-DD the day,
-T is a separator (indicating the start of the time portion),
-HH the hour (in 24-hour format),
-MM the minutes,
-SS the seconds,
-fff the milliseconds.
-- given this interpretation, the information after the T-separator is evaluated as being redundant. Therefore the variable is being transformed into a numeric obtaining the Year variable
-
-```{r Create year}
-library(lubridate) 
-# Convert 'reviewDateTime' from character to POSIXct format (if not already)
-emp$reviewDateTime <- ymd_hms(emp$reviewDateTime)
-
-# Extract the year and convert it to numeric format
-emp$reviewYear <- year(emp$reviewDateTime)
-```
-reviewYear is created being a numeric with range 2013->2024.
-
-```{r EDA reviewYear;Date }
-library(tidyverse)
-library(DataExplorer)
-library(ggplot2)
-
-library(ggplot2)
-
-# Create a bar plot
-ggplot(emp, aes(x = as.factor(reviewYear))) +
-  geom_bar(stat = "count", fill = "blue", color = "black") +  # Count is default, explicitly stating for clarity
-  labs(x = "Review Year", y = "Number of Reviews", title = "Distribution of Reviews by Year") +
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))  # Rotate x labels for better visibility if needed
-
-summary(emp$reviewYear)
-```
-The reviewDateTime variable has been transformed into
-reviewYear
-- a numeric variable having the vast majority of observations from the year 2023. The next coming years 2022 and 2024 do also represent a fair amount of the observations. The years including 2021 and before, are bearing a very minor part of the years, as these reviews could be consideres deleted.
-
-## ratingOverall: Overall rating given to the company by the employee
-This is the variable to predict based on the other features
-
-```{r Factorize/ordering ratingOverall}
-emp$ratingOverall <- factor(emp$ratingOverall)
-summary(emp$ratingOverall)
-# Convert to an ordinal factor
-emp$ratingOverall <- factor(emp$ratingOverall, levels = c(1, 2, 3, 4, 5), ordered = TRUE)
-```
-Making the variable ordinal scaled: ordered = TRUE
-
-```{r Histogram ratingOverall }
-histogram(emp$ratingOverall)
-
-# Load the ggplot2 library
-library(ggplot2)
-
-# Create a histogram of ratingOverall
-ggplot(emp, aes(x = ratingOverall)) +
-  geom_histogram(stat = "count", fill = "steelblue", color = "black", binwidth = 1) +
-  labs(x = "Overall Rating", y = "Frequency", title = "Distribution of Overall Ratings") +
-  theme_minimal() +
-  scale_x_discrete(limits = c("1", "2", "3", "4", "5"))  # Ensure that all rating levels are shown even if some have 0 counts
-```
-Discuss wether ratingOverall yields the best insights being numeric or being a factor?
-Do we want to obtain RMSE measures or Accuracy measures? 
-
-
-## ratingCeo: Rating of the CEO’s performance
-
-```{r Factorize ratingCeo}
-emp$ratingCeo <- factor(emp$ratingCeo)
-summary(emp$ratingCeo)
-```
-
-Performing this NA transformation from NA into "NA" as a category does confuse the dataset.
-- This must be considered only an EDA dataset when factorizing NAs as a distinct category
-```{r Histogram ratingCeo }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Replace NA values with a label "NA's" and ensure all levels are included
-emp$ratingCeo <- factor(emp$ratingCeo)
-levels(emp$ratingCeo) <- c(levels(emp$ratingCeo), "NA's")  # Add "NA's" as a level
-emp$ratingCeo[is.na(emp$ratingCeo)] <- "NA's"  # Assign the label "NA's" to NA values
-
-# Create a bar plot to visualize the distribution of ratings, including NA's
-ggplot(emp, aes(x = ratingCeo, fill = ratingCeo)) +
-  geom_bar() +
-  labs(x = "CEO Rating", y = "Count", title = "Distribution of CEO Ratings Including NA's") +
-  scale_fill_brewer(palette = "Set3") +  # Optional: Adds color palette for better distinction
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-histogram(emp$ratingCeo)
-```
-The 44% missing values is worth a discussion
-- The rating of the Ceo is of appropriate value towards the overall rating of the given company.
-- Does the NA's have a specific meaning whereas it could be categorized as "Informative Missing Values"? The anonymization of the survey does not strengthen this viewpoint.
-
-
-## ratingBusinessOutlook: Rating reflecting the employee’s outlook on the business’s future
-
-```{r Factorize/ordering ratingOutlook}
-emp$ratingBusinessOutlook <- factor(emp$ratingBusinessOutlook)
-summary(emp$ratingBusinessOutlook)
-```
-
-Performing this NA transformation from NA into "NA" as a category does confuse the dataset.
-- This must be considered only an EDA dataset when factorizing NAs as a distinct category
-```{r Histogram ratingOutlook }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Replace NA values with a label "NA's" and ensure all levels are included
-emp$ratingBusinessOutlook <- factor(emp$ratingBusinessOutlook)
-levels(emp$ratingBusinessOutlook) <- c(levels(emp$ratingBusinessOutlook), "NA's")  # Add "NA's" as a level
-emp$ratingBusinessOutlook[is.na(emp$ratingBusinessOutlook)] <- "NA's"  # Assign the label "NA's" to NA values
-
-# Create a bar plot to visualize the distribution of ratings, including NA's
-ggplot(emp, aes(x = ratingBusinessOutlook, fill = ratingBusinessOutlook)) +
-  geom_bar() +
-  labs(x = "BusinessOutlook Rating", y = "Count", title = "Distribution of BusinessOutlook Ratings Including NA's") +
-  scale_fill_brewer(palette = "Set3") +  # Optional: Adds color palette for better distinction
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-histogram(emp$ratingBusinessOutlook)
-```
-The 44% missing values is worth a discussion
-- The rating of the BusinessOutlook is of appropriate value towards the overall rating of the given company.
-- Does the NA's have a specific meaning whereas it could be categorized as "Informative Missing Values"? The anonymization of the survey does not srengthen this viewpoint.
-
-The NA's present in the ratingBusinessOutlook are highly correlated with the NA's in rating CEO. What insights are valueable in this discovery?
-
-To explore these NAs the Data dataset it used, as these NAs are still in the initial format
-```{r Exploring amount of NAs in Ceo + BusinessOutlook}
-library(dplyr)
-library(ggplot2)
-# Filter rows where both columns are NA
-na_ceo_outlook <- Data %>% 
-  filter(is.na(ratingCeo) & is.na(ratingBusinessOutlook))
-
-# Add a column to count occurrences for visualization purposes
-na_ceo_outlook$Count <- 1
-
-count(na_ceo_outlook)
-```
-This count reveals 6612 respondents having NAs in both questions: ratingCeo and ratingBusinessOutlook.
-- These respondents could be evaluated as being not as eager and invested in the questionaire as desired. The outcome of this is to remove these observations having NAs in both columns.
-
-
-## ratingWorkLifeBalance: Rating of the company’s support for work-life balance
-This variable is not having any NA's initially.
-
-ratingWorkLifeBalance could be dealt with being numeric as well as factor. We add the factorized variable while we're keeping the numeric factor. This is to produce the EDA histogram
-
-```{r numeric summary: ratingWorkLifeBalance}
-summary(emp$ratingWorkLifeBalance)
-```
-
-```{r Factorize/ordering ratingWorkLifeBalance}
-emp$facratingWorkLifeBalance <- factor(emp$ratingWorkLifeBalance)
-summary(emp$facratingWorkLifeBalance) 
-# Convert to an ordinal factor
-emp$facratingWorkLifeBalance <- factor(emp$facratingWorkLifeBalance, levels = c(0, 1, 2, 3, 4, 5), ordered = TRUE)
-```
-
-```{r Histogram ratingWorkLifeBalance }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Create a histogram of ratingOverall
-ggplot(emp, aes(x = facratingWorkLifeBalance)) +
-  geom_histogram(stat = "count", fill = "steelblue", color = "black", binwidth = 1) +
-  labs(x = "WorkLife Rating", y = "Frequency", title = "Distribution of WorkLife Balance") +
-  theme_minimal() +
-  scale_x_discrete(limits = c("0","1", "2", "3", "4", "5"))  # Ensure that all rating levels are shown even if some have 0 counts
-histogram(emp$facratingWorkLifeBalance)
-```
-
-
-## ratingCultureAndValues: Rating of the company’s culture and values
-This variable is not having any NA's initially.
-
-ratingCultureAndValues could be dealt with being numeric as well as factor. We add the factorized variable while we're keeping the numeric factor. This is to produce the EDA histogram
-
-```{r numeric summary: ratingCultureAndValues }
-summary(emp$ratingCultureAndValues)
-```
-
-```{r Factorize/ordering ratingCultureAndValues}
-emp$facratingCultureAndValues <- factor(emp$ratingCultureAndValues)
-summary(emp$facratingCultureAndValues) 
-# Convert to an ordinal factor
-emp$facratingCultureAndValues <- factor(emp$facratingCultureAndValues, levels = c(0, 1, 2, 3, 4, 5), ordered = TRUE)
-```
-
-```{r Histogram facratingCultureAndValues }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Create a histogram of ratingOverall
-ggplot(emp, aes(x = facratingCultureAndValues)) +
-  geom_histogram(stat = "count", fill = "steelblue", color = "black", binwidth = 1) +
-  labs(x = "Culture Rating", y = "Frequency", title = "Distribution of Culture and Values") +
-  theme_minimal() +
-  scale_x_discrete(limits = c("0","1", "2", "3", "4", "5"))  # Ensure that all rating levels are shown even if some have 0 counts
-histogram(emp$facratingCultureAndValues)
-```
-
-
-## ratingDiversityAndInclusion: Rating of the company’s diversity and inclusion efforts
-This variable is not having any NA's initially.
-
-ratingDiversityAndInclusion could be dealt with being numeric as well as factor. We add the factorized variable while we're keeping the numeric factor. This is to produce the EDA histogram
-
-```{r numeric summary: ratingDiversityAndInclusion}
-summary(emp$ratingDiversityAndInclusion)
-```
-
-```{r Factorize/ordering ratingDiversityAndInclusion}
-emp$facratingDiversityAndInclusion <- factor(emp$ratingDiversityAndInclusion)
-summary(emp$facratingDiversityAndInclusion) 
-# Convert to an ordinal factor
-emp$facratingDiversityAndInclusion <- factor(emp$facratingDiversityAndInclusion, levels = c(0, 1, 2, 3, 4, 5), ordered = TRUE)
-```
-
-```{r Histogram facratingDiversityAndInclusion }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Create a histogram of ratingOverall
-ggplot(emp, aes(x = facratingDiversityAndInclusion)) +
-  geom_histogram(stat = "count", fill = "steelblue", color = "black", binwidth = 1) +
-  labs(x = "Diversity Rating", y = "Frequency", title = "Distribution ofDiversity and Inclusion") +
-  theme_minimal() +
-  scale_x_discrete(limits = c("0","1", "2", "3", "4", "5"))  # Ensure that all rating levels are shown even if some have 0 counts
-histogram(emp$facratingDiversityAndInclusion)
-```
-
-
-## ratingSeniorLeadership: Rating of the senior leadership team
-This variable is not having any NA's initially.
-
-ratingSeniorLeadership could be dealt with being numeric as well as factor. We add the factorized variable while we're keeping the numeric factor. This is to produce the EDA histogram
-
-```{r numeric summary: ratingSeniorLeadership}
-summary(emp$ratingSeniorLeadership)
-```
-
-```{r Factorize/ordering ratingSeniorLeadership}
-emp$facratingSeniorLeadership <- factor(emp$ratingSeniorLeadership)
-summary(emp$facratingSeniorLeadership) 
-# Convert to an ordinal factor
-emp$facratingSeniorLeadership <- factor(emp$facratingSeniorLeadership, levels = c(0, 1, 2, 3, 4, 5), ordered = TRUE)
-```
-
-```{r Histogram facratingSeniorLeadership }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Create a histogram of ratingOverall
-ggplot(emp, aes(x = facratingSeniorLeadership)) +
-  geom_histogram(stat = "count", fill = "steelblue", color = "black", binwidth = 1) +
-  labs(x = "Rating of Senior Leaders", y = "Frequency", title = "Distribution Rating of Senior Leaders") +
-  theme_minimal() +
-  scale_x_discrete(limits = c("0","1", "2", "3", "4", "5"))  # Ensure that all rating levels are shown even if some have 0 counts
-histogram(emp$facratingSeniorLeadership)
-```
-
-
-## ratingCareerOpportunities: Rating of career advancement opportunities within the company
-
-This variable is not having any NA's initially.
-
-ratingCareerOpportunities could be dealt with being numeric as well as factor. We add the factorized variable while we're keeping the numeric factor. This is to produce the EDA histogram
-
-```{r numeric summary: ratingCareerOpportunities}
-summary(emp$ratingCareerOpportunities)
-```
-
-```{r Factorize/ordering ratingCareerOpportunities}
-emp$facratingCareerOpportunities <- factor(emp$ratingCareerOpportunities)
-summary(emp$facratingCareerOpportunities) 
-# Convert to an ordinal factor
-emp$facratingCareerOpportunities <- factor(emp$facratingCareerOpportunities, levels = c(0, 1, 2, 3, 4, 5), ordered = TRUE)
-```
-
-```{r Histogram facratingCareerOpportunities }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Create a histogram of facratingCareerOpportunities
-ggplot(emp, aes(x = facratingCareerOpportunities)) +
-  geom_histogram(stat = "count", fill = "steelblue", color = "black", binwidth = 1) +
-  labs(x = "Rating of Career Opportunities", y = "Frequency", title = "Distribution Rating of Career Opportunities") +
-  theme_minimal() +
-  scale_x_discrete(limits = c("0","1", "2", "3", "4", "5"))  # Ensure that all rating levels are shown even if some have 0 counts
-histogram(emp$facratingCareerOpportunities)
-```
-
-
-## ratingCompensationAndBenefits: Rating of the compensation and benefits offered.
-
-This variable is not having any NA's initially.
-
-ratingCompensationAndBenefits could be dealt with being numeric as well as factor. We add the factorized variable while we're keeping the numeric factor. This is to produce the EDA histogram
-
-```{r numeric summary: ratingCompensationAndBenefits}
-summary(emp$ratingCompensationAndBenefits)
-```
-
-```{r Factorize/ordering ratingCompensationAndBenefits}
-emp$facratingCompensationAndBenefits <- factor(emp$ratingCompensationAndBenefits)
-summary(emp$facratingCompensationAndBenefits) 
-# Convert to an ordinal factor
-emp$facratingCompensationAndBenefits <- factor(emp$facratingCompensationAndBenefits, levels = c(0, 1, 2, 3, 4, 5), ordered = TRUE)
-```
-
-```{r Histogram facratingCareerOpportunities }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Create a histogram of facratingCompensationAndBenefits
-ggplot(emp, aes(x = facratingCompensationAndBenefits)) +
-  geom_histogram(stat = "count", fill = "steelblue", color = "black", binwidth = 1) +
-  labs(x = "Rating of Compensation and Benefits", y = "Frequency", title = "Distribution Rating of Compensation and Benefits") +
-  theme_minimal() +
-  scale_x_discrete(limits = c("0","1", "2", "3", "4", "5"))  # Ensure that all rating levels are shown even if some have 0 counts
-histogram(emp$facratingCompensationAndBenefits)
-```
-
-
-## Overview ratingWorkLifeBalance ratingCultureAndValues ratingDiversityAndInclusion ratingSeniorLeadership ratingCareerOpportunities ratingCompensationAndBenefits
-
-- Code in FactorEXAM is showing that observations consists of purely scores of 0 across all these questions, while these exact observations are scoring the DV ratingOverall between 3-5. This seems to be a flawed as the logic fails in this relationship regarding these observations.
-
-
-## ratingRecommendToFriend: Likelihood of an employee recommending the company to a friend
-
-initially 39% missing values
-
-```{r Factorize/ordering ratingRecommendToFriend}
-emp$ratingRecommendToFriend <- factor(emp$ratingRecommendToFriend)
-summary(emp$ratingRecommendToFriend)
-```
-
-Performing this NA transformation from NA into "NA" as a category does confuse the dataset.
-- This must be considered only an EDA dataset when factorizing NAs as a distinct category
-```{r Histogram ratingRecommendToFriend }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Replace NA values with a label "NA's" and ensure all levels are included
-emp$ratingRecommendToFriend <- factor(emp$ratingRecommendToFriend)
-levels(emp$ratingRecommendToFriend) <- c(levels(emp$ratingRecommendToFriend), "NA's")  # Add "NA's" as a level
-emp$ratingRecommendToFriend[is.na(emp$ratingRecommendToFriend)] <- "NA's"  # Assign the label "NA's" to NA values
-
-# Create a bar plot to visualize the distribution of ratings, including NA's
-ggplot(emp, aes(x = ratingRecommendToFriend, fill = ratingRecommendToFriend)) +
-  geom_bar() +
-  labs(x = "Recommend to Friend Rating", y = "Count", title = "Distribution of Recommend to Friend Ratings Including NA's") +
-  scale_fill_brewer(palette = "Set3") +  # Optional: Adds color palette for better distinction
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-histogram(emp$ratingRecommendToFriend)
-```
-The 39% missing values is worth a discussion
-- Does the NA's have a specific meaning whereas it could be categorized as "Informative Missing Values"? The anonymization of the survey does not srengthen this viewpoint.
-
-
-## isCurrentJob: Indicator of whether the review is from a current employee
-
-```{r isCurrentJob initial summary}
-summary(emp$isCurrentJob)
-```
-The 39% missing values are being evaluated as "Informative missing values" (Kuhn and Johnson 2013). As the variable only contains 1s and NAs, these NAs are indeed an informative missing value which requires being transformed into 0s.
-
-```{r IsCurrent Job NA into 0 mutation}
-library(dplyr)
-# Replace NA values with 0s
-emp <- emp %>% 
-  mutate(isCurrentJob = replace_na(isCurrentJob, 0))
-emp$isCurrentJob <- factor(emp$isCurrentJob)
-summary(emp$isCurrentJob)
-```
-
-```{r Histogram isCurrentJob }
-library(ggplot2)
-# Create a bar plot to visualize the distribution of ratings, including NA's
-ggplot(emp, aes(x = isCurrentJob, fill = isCurrentJob)) +
-  geom_bar() +
-  labs(x = "Is/Is not Current in job Distribution", y = "Count", title = "Distribution of Is/Is not Current in job") +
-  scale_fill_brewer(palette = "Set3") +  # Optional: Adds color palette for better distinction
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-histogram(emp$isCurrentJob)
-```
-
-
-## lengthOfEmployment: Duration of the employee’s tenure with the company
-
-```{r lengthOfEmployment initial summary}
-emp$lengthOfEmployment <- factor(emp$lengthOfEmployment)
-summary(emp$lengthOfEmployment)
-```
-
-```{r Histogram lengthOfEmployment }
-library(ggplot2)
-# Create a bar plot to visualize the distribution of
-ggplot(emp, aes(x = lengthOfEmployment, fill = lengthOfEmployment)) +
-  geom_bar() +
-  labs(x = "Employment lenght Distribution", y = "Count", title = "Distribution of Employment lenght") +
-  scale_fill_brewer(palette = "Set3") +  # Optional: Adds color palette for better distinction
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-histogram(emp$lengthOfEmployment)
-```
-The lengthOfEmployment has a right skewed distribution with the vast majority of employees being in the company for less than a year or less than 2 year. The mean is 1,6 whereas the median is 1 as well. The employees do not stay in the company for lang given this insight.
-
-
-## employmentStatus: Employment status, such as full-time, part-time, etc.
-
-```{r employmentStatus initial summary}
-summary(emp$employmentStatus)
-```
-The 0.4% missing values are being evaluated as MAR "Missing At Random " (Little and Rubin 2014).
-
-Performing this NA transformation from NA into "NA" as a category does confuse the dataset.
-- This must be considered only an EDA dataset when factorizing NAs as a distinct category
-```{r Histogram employmentStatus }
-# Load the ggplot2 library
-library(ggplot2)
-
-# Replace NA values with a label "NA's" and ensure all levels are included
-emp$employmentStatus <- factor(emp$employmentStatus)
-levels(emp$employmentStatus) <- c(levels(emp$employmentStatus), "NA's")  # Add "NA's" as a level
-emp$employmentStatus[is.na(emp$employmentStatus)] <- "NA's"  # Assign the label "NA's" to NA values
-
-# Create a bar plot to visualize the distribution of ratings, including NA's
-ggplot(emp, aes(x = employmentStatus, fill = employmentStatus)) +
-  geom_bar() +
-  labs(x = "Employment Status", y = "Count", title = "Distribution of Employment Status") +
-  scale_fill_brewer(palette = "Set3") +  # Optional: Adds color palette for better distinction
-  theme_minimal() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-
-histogram(emp$employmentStatus)
-```
-
-
-## jobEndingYear: The year the employee’s job ended, if applicable
-- deleting this variable due to the 61% Missings. As support for this deletion, the variable isCurrentJob is evaluated as having an adequate extent of information given in jobEndingYear.
-- WE DELETE THIS VARIABLE
-
-
-## jobTitle.text: The job title of the reviewer
-
-- Deleting this variable as we have a huge amount of different jobtitles, namely 2733 various instances, whereas these do not contribute with anything but noise to the dataset.
-
-```{r count of unique jobTitle.text}
-unique_job_titles <- unique(emp$jobTitle.text)
-
-# Count the number of unique job titles
-number_of_unique_job_titles <- length(unique_job_titles)
-number_of_unique_job_titles
-```
-
-
-## location.name: The name of the location where the reviewer works or worked
-
-- - Deleting this variable as we have a huge amount of different location anmes, namely 1201 various instances, whereas these do not contribute with anything but noise to the dataset. 
-
-```{r count of unique location.name}
-unique_location.name <- unique(emp$location.name)
-
-# Count the number of unique job titles
-number_of_unique_location.name <- length(unique_location.name)
-number_of_unique_location.name
-```
 
 # DELETED TREE CARSEATS
 ## 8.3.1 Fitting Classification Trees (ISLRp.353)'
@@ -1222,6 +689,25 @@ table(tree.pred, High.test)
 ```
 correct predictions for 91,37% of the locations in the test data set WITH PRUNING the decision tree. The test accuracy gains 0.0097 percentagepoints by using pruning having 3 terminal nodes instead of 6. (0.9137-0.9040 = 0.0097)
 
+# Boysen 0s and ratingOverall scoring HIGH
 
+From Exploratory Data Analysis is seen in the dataset, that 310 respondents is scoring ratingOverall with a value from 3-5 and at the same score 
+- ratingCareerOpportunities,
+- ratingCompensationAndBenefits,
+- ratingCultureAndValues,
+- ratingDiversityAndInclusion,
+- ratingSeniorLeadership,
+- ratingWorkLifeBalance
+to zero. This is assessed being a flawed respondent, as it is assumed that this respondent does not take a stand on the above listed question-categories but still rates the ratingOverall with high scores.
+```{r deleting instances having 0s in several categorical 0-5 and ratingOverall 3-5}
+# Since there's still some giving 0's another subset of data will be made, deleting all the rows where the respondant answered 0
+#empFactor <- empFactor[!(empFactor$ratingCareerOpportunities == 0 |
+#                         empFactor$ratingCompensationAndBenefits == 0 |
+#                         empFactor$ratingCultureAndValues == 0 |
+#                         empFactor$ratingDiversityAndInclusion == 0 |
+#                         empFactor$ratingSeniorLeadership == 0 |
+#                         empFactor$ratingWorkLifeBalance == 0), ]
+plot_histogram(empFactor)
+```
 
 
